--- a/main.html
+++ b/main.html
@@ -7,6 +7,32 @@
 </head>
 
 <body>
+	<table>
+		<thead>
+			<th>Roll numbers</th>
+			<th>Names</th>
+		</thead>
+		<tbody>
+			<td>1</td>
+			<td>Anush</td>
+		</tbody>
+		<tbody>
+			<td>2</td>
+			<td>Akash</td>
+		</tbody>
+		<tbody>
+			<td>3</td>
+			<td>Anupam</td>
+		</tbody>
+	</table>
+
+	<h1>List of medias</h1>
+
+	<ol>
+		<li><img src="https://picsum.photos/id/123/200/300" alt="water image"></li>
+		<li><video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" controls source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video></li>
+		<li><audio controls src="http://commondatastorage.googleapis. com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio></li>
+	</ol>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
